--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -8,7 +8,7 @@
 
                     <p>{{ marcador.descripcion }}</p>
                     <div>
-                        <button mat-raised-button color="primary">Editar</button>
+                        <button (click)="editarMarcador(marcador)" mat-raised-button color="primary">Editar</button>
                         <button (click)="borrarMarcador(i)" mat-raised-button color="warn">Eliminar</button>
                     </div>
                 </agm-info-window>
